--- a/references/index.html
+++ b/references/index.html
@@ -595,7 +595,10 @@
 <ul>
 <li>For Blender Python API documentation visit <a href="https://docs.blender.org/api/current/info_quickstart.html">Blender Python API</a></li>
 </ul>
-<h2 id="system-documentation"><a href="../system_doc/">System Documentation</a></h2>
+<h2 id="system-documentation">System Documentation</h2>
+<ul>
+<li><a href="../system_doc/">System Documentation</a></li>
+</ul>
 <h2 id="api-reference">API Reference</h2>
 <ul>
 <li><a href="../modules/laser/">Laser Module</a></li>
