--- a/overview/index.html
+++ b/overview/index.html
@@ -694,10 +694,10 @@ Some of the challenges faced are -
 - Chandrayan LLRI simulation - Return waveform and point cloud simulation.</p>
 <h2 id="limulator-components">Limulator Components</h2>
 <p>There are four major components of a limulator:
-        1. Terrain component<br />
-        2. Trajectory component
-        3. Platform component
-        4. Sensor component</p>
+ - Terrain component<br />
+ - Trajectory component
+ - Platform component
+ - Sensor component</p>
 <pre><code>    (Image on 7th slide to be included here)
 </code></pre>
 <p>The terrain Component involves the formation of 3D static terrain imagery that resembles a real scene. The imagery includes great detailing which enables the possibility of scenario generation. The trajectory component on the other hand is responsible for adding dynamism to the static imagery. This is achieved by considering the acceleration and attitude change of moving objects. The platform component takes user input to narrow down the requirements such as platform type (mobile, stationary, ground-based, aerial), placement of the sensor on the platform, sensor type, orientation, trajectory, and so on. The sensor component emphasizes the type of the sensor i.e LiDAR or camera and takes input on sensor characteristics such as position, orientation, PRF, scan range, FOV, etc.</p>
