--- a/index.html
+++ b/index.html
@@ -446,7 +446,7 @@
     <div class="md-grid md-typeset">
       <div class="mdx-hero">
         <div class="mdx-hero__image">
-          <img src="/assets/images/undraw_Order_ride_re_372k.svg" alt="" width="1659" height="1200" draggable="false">
+          <img src="./assets/images/undraw_Order_ride_re_372k.svg" alt="" width="1659" height="1200" draggable="false">
         </div>
         <div class="mdx-hero__content">
           <h1>Simulate any Lidar Data</h1>
@@ -463,10 +463,9 @@
     </div>
   </section>
   <div class="top-hr feature-item">
-    <p>Limulator, i.e. LiDAR + Simulator, is a tool intended to simulate the lidar data generation and labelling process. Since then, it has come a long way to become a platform to actively support the development and testing of autonomous driving systems. As the development of autonomous systems picks pace, it has become absolutely critical to extensively test them in virtual environments before deploying them in public settings. Here we present one solution for that purpose: Limulator, a flexible simulator for point clouds, autonomous driving and much more.</p>
-  </div>
-  <div class="top-hr feature-item">  
-    <p>The simulator is built upon Blender, which provides support for the computation of high-fidelity physics, and simulation rendering and controls all the actors. Limulator controls the trajectories of actors, sensors, cameras and platforms by providing a UI interface inside Blender.</p>
+    <p>Limulator, i.e. LiDAR + Simulator, is a tool intended to simulate the lidar data generation and labelling process. It has come a long way to become a platform to actively support the development and testing of autonomous driving systems. As the development of autonomous systems picks pace, it has become absolutely critical to extensively test them in virtual environments before deploying them in public settings. Here we present one solution for that purpose: Limulator, a flexible simulator for point clouds, autonomous driving and much more.<br>
+    The simulator is built upon Blender, which provides support for the computation of high-fidelity physics, and simulation rendering and controls all the actors. Limulator controls the trajectories of actors, sensors, cameras and platforms by providing a UI interface inside Blender.</p>    
+    <img src="https://th.bing.com/th/id/OIP.BqW35DPRFQPyneeJhhwV0QHaGk?pid=ImgDet&rs=1" height="250">
   </div>
   <div class="top-hr feature-item">  
     <p>To gain a perspective on the structure of the Limulator, some of the major components are listed below:</p>
@@ -480,8 +479,7 @@
             </svg>
             Scene
         </h2>
-        <p>Use UP42 via Python! Order geospatial data, run analytic workflows and
-            generate insights!</p>
+        <p>A scene is a 3D real-world model, generated in a blend file.</p>
     </div>
     <div class="feature-item">
         <h2>
@@ -490,21 +488,21 @@
                     d="M16 17v2H2v-2s0-4 7-4 7 4 7 4m-3.5-9.5A3.5 3.5 0 109 11a3.5 3.5 0 003.5-3.5m3.44 5.5A5.32 5.32 0 0118 17v2h4v-2s0-3.63-6.06-4M15 4a3.39 3.39 0 00-1.93.59 5 5 0 010 5.82A3.39 3.39 0 0015 11a3.5 3.5 0 000-7z" />
             </svg>Platform
         </h2>
-        <p>Use UP42 together with your preferred Python libraries! For data science, building apps etc. </p>
+        <p>Platforms are all objects, dynamic and static, where sensors and cameras can be embedded. They can be chosen from the scene or imported from outside.</p>
     </div>
     <div class="feature-item">
         <h2>
             <svg xmlns="http://www.w3.org/2000/svg" width="35" height="35" viewBox="0 0 24 24" fill="none" stroke="#000000" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"><rect x="3" y="3" width="18" height="18" rx="2"/><circle cx="8.5" cy="8.5" r="1.5"/><path d="M20.4 14.5L16 10 4 20"/></svg>
             Sensors
         </h2>
-        <p>Interactive maps & visualizations. Ideal to use with Jupyter notebooks.</p>
+        <p>Sensors are static objects fixed on platforms. Currently, limulator supports all major generic LiDAR sensors.</p>
     </div>
     <div class="feature-item">
       <h2>
           <svg xmlns="http://www.w3.org/2000/svg" width="35" height="35" viewBox="0 0 24 24" fill="none" stroke="#000000" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"><rect x="3" y="3" width="18" height="18" rx="2"/><circle cx="8.5" cy="8.5" r="1.5"/><path d="M20.4 14.5L16 10 4 20"/></svg>
           Cameras
       </h2>
-      <p>Interactive maps & visualizations. Ideal to use with Jupyter notebooks.</p>
+      <p>Camera support in the limulator is implemented through the Blender camera module.</p>
   </div>
 </div>
 
