Updated image link

--- a/index.html
+++ b/index.html
@@ -446,7 +446,7 @@
     <div class="md-grid md-typeset">
       <div class="mdx-hero">
         <div class="mdx-hero__image">
-          <img src="./assets/images/undraw_Order_ride_re_372k.svg" alt="" width="1659" height="1200" draggable="false">
+          <img src="https://raw.githubusercontent.com/bharatlohani/limulator_docs/984b76f7fad2dfbfb4d310ab1444aa9eee9bacc9/assets/images/undraw_order_ride_re_372k.svg" alt="" width="1659" height="1200" draggable="false">
         </div>
         <div class="mdx-hero__content">
           <h1>Simulate any Lidar Data</h1>
