--- a/index.html
+++ b/index.html
@@ -500,8 +500,8 @@
     </div>
   </section>
   <div class="top-hr feature-text" style="height: 500px;">
-    <p>As the development of autonomous systems is picking up pace, it has become absolutely critical to extensively test them in virtual environments before deploying them in public settings. Limulator (LiDAR + Simulator), our one stop solution for flexible simulation of training datasets for computer vision, autonomous driving and much more. Our team has formulated a pipeline which lets us create 3D environments with life like material textures and dynamic movements along with the ability to design platform rigs with any number of camera's and sensors. Each sensor is capable of generating high quality labelled datasets.   Limulator is  is a tool intended to simulate the lidar data generation and labelling process. It has come a long way to become a platform to actively support the development and testing of autonomous driving systems. <br>
-    The simulator is built upon Blender, which provides support for the computation of high-fidelity physics, and simulation rendering and controls all the actors. Limulator controls the trajectories of actors, sensors, cameras and platforms by providing a UI interface inside Blender.</p>    
+    <p>Welcome to Limulator - the ultimate solution for creating realistic LIDAR data for any environment! Limulator is a powerful simulator that allows you to generate accurate and precise LIDAR data for a wide range of scenarios, from automotive testing to infrastructure simulations.</p>
+    
     
   </div>
   
