--- a/index.html
+++ b/index.html
@@ -500,7 +500,12 @@
     </div>
   </section>
   <div class="top-hr feature-text" style="height: 500px;">
-    <p>Welcome to Limulator - the ultimate solution for creating realistic LIDAR data for any environment! Limulator is a powerful simulator that allows you to generate accurate and precise LIDAR data for a wide range of scenarios, from automotive testing to infrastructure simulations.</p>
+    <p>Welcome to Limulator - the ultimate solution for creating realistic LIDAR data for any environment! Limulator is a powerful simulator that allows you to generate accurate and precise LIDAR data for a wide range of scenarios, from automotive testing to infrastructure simulations.
+      Limulator is designed to be user-friendly, with an easy-to-use interface that requires no prior experience with LIDAR technology. With Limulator, you can quickly create complex 3D environments, customize sensor parameters, and simulate various sensor configurations. You can even generate data for different types of LIDAR sensors, such as 2D and 3D LIDARs, for a more accurate simulation.
+      Whether you're a researcher, engineer, or developer, Limulator can help you accelerate your projects by providing realistic data for testing and evaluation. With Limulator, you can save time and money by reducing the need for expensive and time-consuming physical testing.
+      Limulator is open-source, free, and available for download on GitHub. You can also access our comprehensive documentation and support to help you get started.
+      So, why wait? Download Limulator today and take your LIDAR simulations to the next level!
+    </p>
     
     
   </div>
