Updated linespacing and homepage

--- a/index.html
+++ b/index.html
@@ -499,7 +499,7 @@
       </div>
     </div>
   </section>
-  <div class="top-hr feature-text" style="text-align: justify;">
+  <div class="top-hr feature-text" style="text-align: justify; margin-top: 0px;">
     <p>Welcome to Limulator - the ultimate solution for creating realistic LIDAR data for any environment! Limulator is a powerful simulator that allows you to generate accurate and precise LIDAR data for a wide range of scenarios, from automotive testing to infrastructure simulations.
         
         Limulator is designed to be user-friendly, with an easy-to-use interface that requires no prior experience with LIDAR technology. With Limulator, you can quickly create complex 3D environments, customize sensor parameters, and simulate various sensor configurations. You can even generate data for different types of LIDAR sensors, such as 2D and 3D LIDARs, for a more accurate simulation.
