startup page updates

--- a/startup/index.html
+++ b/startup/index.html
@@ -694,7 +694,7 @@
 <li>Go to Scripting -&gt; Open main2.py file.</li>
 </ol>
 <p><img alt="Step 2a" src="../content/stp2.png" /></p>
-<p><img alt="Step 2b" src="./content/stp2b.png" /></p>
+<p><img alt="Step 2b" src="../content/stp2b.png" /></p>
 <ol>
 <li>In main2.py file change the path</li>
 </ol>
