--- a/index.html
+++ b/index.html
@@ -596,8 +596,8 @@
     
   </div>
   <div style="margin: auto; margin-top: 200px;">
-    <div class="video-container" style="width: 49%; display: inline-block;" ><video autoplay controls style="width: 100%;" ><source src="./content/1_0001-0046.mp4" type="video/mp4" /></video></div>
-    <div class="video-container" style="width: 49%; display: inline-block;"><video autoplay controls  style="width: 100%;"><source src="./content/0001-0046.mp4" type="video/mp4" /></video></div>
+    <div class="video-container" style="width: 49%; display: inline-block;" ><video loop autoplay controls onloadstart="this.playbackRate=4.0;" style="width: 100%;" ><source src="./content/1_0001-0046.mp4" type="video/mp4" /></video></div>
+    <div class="video-container" style="width: 49%; display: inline-block;"><video loop autoplay controls onloadstart="this.playbackRate=4.0;" style="width: 100%;"><source src="./content/0001-0046.mp4" type="video/mp4" /></video></div>
     </div>
 
     <!--   
