--- a/index.html
+++ b/index.html
@@ -509,7 +509,7 @@
     </div>
   
     <div class="top-hr feature-text">  
-      <h2>Top Features:</h2>
+      <h1 style="text-align: center; margin: auto;">Top Features:</h1>
     </div>
     <div class="top-hr">
       <div class="feature-item">
