--- a/tutorials/open_file_in_cc/index.html
+++ b/tutorials/open_file_in_cc/index.html
@@ -428,19 +428,19 @@
 <ol>
 <li>Open Cloud Compare Software </li>
 </ol>
-<p><img alt="Open Cloud Compare" src="./content/open_cc.png" /></p>
+<p><img alt="Open Cloud Compare" src="https://raw.githubusercontent.com/bharatlohani/limulator_docs_markdown/main/content/open_cc.png" /></p>
 <ol>
 <li>Click on open new file and select the CSV file.  </li>
 </ol>
-<p><img alt="Open CSV" src="./content/open_cc_2.png" /></p>
+<p><img alt="Open CSV" src="https://raw.githubusercontent.com/bharatlohani/limulator_docs_markdown/main/content/open_cc_2.png" /></p>
 <ol>
 <li>In the next window, click on the label tab and select ignore and select apply all. </li>
 </ol>
-<p><img alt="Set label" src="./content/open_cc_3.png" /></p>
+<p><img alt="Set label" src="https://raw.githubusercontent.com/bharatlohani/limulator_docs_markdown/main/content/open_cc_3.png" /></p>
 <ol>
 <li>Visualize the point cloud</li>
 </ol>
-<p><img alt="Visulaize" src="./content/open_cc_4.png" /></p>
+<p><img alt="Visulaize" src="https://raw.githubusercontent.com/bharatlohani/limulator_docs_markdown/main/content/open_cc_4.png" /></p>
 
 
 
